NotVerifiedCounterExamples/Overfitting/ArjaE/BubbleSort/bug5/Repaired/counterexamples.txt
/mnt/c/Users/marloncalvo/workspace/BuggyJavaJML/NotVerifiedCounterExamples/Overfitting/ArjaE/BubbleSort/bug5/Repaired/BubbleSort.java:7: error: cannot find symbol
	SwapInArray s = new SwapInArray();
	^
  symbol:   class SwapInArray
  location: class BubbleSort
/mnt/c/Users/marloncalvo/workspace/BuggyJavaJML/NotVerifiedCounterExamples/Overfitting/ArjaE/BubbleSort/bug5/Repaired/BubbleSort.java:7: error: cannot find symbol
	SwapInArray s = new SwapInArray();
	                    ^
  symbol:   class SwapInArray
  location: class BubbleSort
2 errors
